apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"n8n","namespace":"n8n"},"spec":{"ports":[{"port":80,"targetPort":5678}],"selector":{"app":"n8n"}}}
  name: n8n
  namespace: n8n
spec:
  - 10.106.86.84
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5678
  selector:
    app: n8n
  sessionAffinity: None
  type: ClusterIP
  loadBalancer: {}
